<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/info_title"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/personalinfo_hint"
                android:textSize="15sp" />
        </LinearLayout>


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="1">

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="1dp"
                    android:text="@string/info_gender"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radiogroup_gender"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp">

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/info_female"
                        android:textColor="@android:color/holo_purple"
                        android:textSize="18dp" />

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/info_male"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textSize="18dp" />
                </RadioGroup>
            </TableRow>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <!--这里是隐藏的LinearLayout，为的是在应用启动时防止下面的EditText自动获取焦点，打开软件盘，挤压界面-->
            </LinearLayout>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/info_age"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/info_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/info_age_hint"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/info_height"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/info_height"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/info_height_hint"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/info_weight"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/info_weight"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/info_weight_hint"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
                <!--android:inputType="numberDecimal"-->
            </TableRow>

            <Button
                android:id="@id/forward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bn_blue_selector"
                android:onClick="onActionClick"
                android:text="@string/info_ok"
                android:textSize="25sp" />

        </TableLayout>

        <EditText
            android:id="@+id/average_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="100dp"
            android:hint="@string/average_set"
            android:inputType="number" />
    </LinearLayout>
</ScrollView>