<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main">

    <Button
        android:id="@+id/back"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/arrow_left_selector"
        android:onClick="onActionClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingLeft="50dp"
        android:text="@string/former" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/page_2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_arrow"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingRight="54dp"/>
    <Button
        android:id="@+id/result"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:background="@drawable/arrow_right_selector"
        android:layout_alignParentRight="true"
        android:onClick="onActionClick"/>
</RelativeLayout>